# python-mini-projects

./: .env_template  .flake8  pyproject.toml  requirements.txt
13.1 - generators/: 1_functional_python.py  2_before.py  3_after.py
13.2 - decorators/: 1_decorators.py  2_before.py  3_after.py
14.1 - Библиотеки json, requests и datetime/: 2_before.py  3_after.py
14.2 - Библиотека logging/: 1_code.py  2_before.py  3_after.py
15.1 - Библиотека pandas, csv/: 1_code.py  2_before.py  3_after.py  sales_data.json  settings.json
15.2 - Библиотека re, collections, random, os/: 1_code.py  2_before.py  3_after.py
count_words/: disp_tools.py  main.py
password_generator/: generator.py
src/: converter.py  main.py  utils.py  youtube.py  youtube_api.py
tests/: test_utils.py  test_youtube_api.py
