[tool.poetry]
name = "python-mini-projects"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "python_mini_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.87.0"
isodate = "^0.6.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.black]
line-length = 119
exclude = '.venv'

[tool.isort]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
